--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<h1> 
-  <b> Hello </b> 
-</h1>
+<script>
+  var c = document.getElementById("myCanvas");
+  var ctx = c.getContext("2d");
+  ctx.font = "30px Arial";
+  ctx.fillText("Hello World", 10, 50);
+</script>
